Bug 136058 - loimpress "audio / video" icon corrupt
Summary: loimpress "audio / video" icon corrupt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.4
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-24 03:01 UTC by Jussi Eloranta
Modified: 2021-12-08 08:56 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the icon problem (35.90 KB, image/png)
2020-08-24 03:01 UTC, Jussi Eloranta
Details
The file showing the problem (18.20 MB, application/vnd.oasis.opendocument.presentation)
2021-04-19 15:48 UTC, Buovjaga
Details
test case (2nd page shows wrong size) (250.38 KB, application/vnd.oasis.opendocument.presentation)
2021-04-21 00:13 UTC, Jussi Eloranta
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jussi Eloranta 2020-08-24 03:01:50 UTC
Created attachment 164613 [details]
Screenshot showing the icon problem

I have inserted audio track to a slide with "Insert -> Audio or Video...". Everything looks fine at first but then I save the file (in native odp format) and open it again in loimpress. At this point the original icon representing video/audio is missing and there is only a tiny square in that place. If I select the object, the selection shows the right size for the icon. I am attaching a picture what is looks like. Furthermore, if I would export this to some other format (or print) then the icon shows as small. I believe that this is a bug.
Comment 1 Jussi Eloranta 2020-08-25 03:46:38 UTC
It seems that the first slide was OK, this problem appeared 2nd slide ->
Comment 2 Jussi Eloranta 2020-08-25 15:12:28 UTC
Here is a link to document that shows this problem:

http://aa6kj.hopto.org/eloranta_lab/CHEM102/Chem102_Ch15_I.odp

On linux the audio/video icon on 2nd page and onwards are messed up.
Comment 3 Buovjaga 2021-04-19 15:48:50 UTC
Created attachment 171293 [details]
The file showing the problem

I can't reproduce the problem with a fresh file.

Can you consistently reproduce this with new files?

Arch Linux 64-bit
Version: 7.1.2.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: fi-FI
7.1.2-2
Calc: threaded
Comment 4 Jussi Eloranta 2021-04-21 00:12:29 UTC
Yes, I can. I have added new attachment. The second slide shows wrong size for the icon (smaller than originally put there). It gets worse when adding more.
Comment 5 Jussi Eloranta 2021-04-21 00:13:12 UTC
Created attachment 171322 [details]
test case (2nd page shows wrong size)

Test case
Comment 6 QA Administrators 2021-04-21 03:53:02 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2021-04-21 20:04:58 UTC
I don't know, why I could not reproduce at first, but after a private exchange with Jussi I was able to see the problem. Simplest steps:

1. Create new presentation
2. Click in the "Click to add text" content text box as if to add text
3. Insert - Audio or Video, pick an audio file
4. Right-click the slide in the Slides pane, Duplicate Slide
5. Save and reload

Now the icon in the second slide has a smaller size.

However, I noticed that this behaviour is gone with this commit:
https://git.libreoffice.org/core/commit/44711d9eb53eb6247ebdb9293a3eb5e643f78059
tdf#130326 related, speed up drawing

I bibisected it with linux-64-7.2 repository.

Jussi: you could try with an appimage of 7.2 to check, if the problem is gone for you as well: https://libreoffice.soluzioniopen.com/

If so, you can change the status to resolved fixed.
Comment 8 Jussi Eloranta 2021-04-22 16:46:26 UTC
I can confirm that the latest development build no longer has this bug. It would be great to include the fix for older versions too. Thanks!
Comment 9 Buovjaga 2021-04-23 11:04:48 UTC
(In reply to Jussi Eloranta from comment #8)
> I can confirm that the latest development build no longer has this bug. It
> would be great to include the fix for older versions too. Thanks!

Noel said the fix is not risky to backport to 7.1, so he did it now: https://bugs.documentfoundation.org/show_bug.cgi?id=130326#c30
Comment 10 Xisco Faulí 2021-04-23 11:35:36 UTC
Unfortunately the commit was reverted in https://cgit.freedesktop.org/libreoffice/core/commit/?id=7ef7a23e7ee1f59cf719618991b3028456d84cf8
Comment 11 Xisco Faulí 2021-04-23 11:46:40 UTC
(In reply to Xisco Faulí from comment #10)
> Unfortunately the commit was reverted in
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=7ef7a23e7ee1f59cf719618991b3028456d84cf8

oh, and later it was again fixed by

https://cgit.freedesktop.org/libreoffice/core/commit/?id=b236b36475ed9a204ac931c34ccc23205296a0a6

author	Noel Grandin <noelgrandin@gmail.com>	2021-04-17 14:46:59 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-04-17 20:29:59 +0200
commit b236b36475ed9a204ac931c34ccc23205296a0a6 (patch)
tree 32770e990c8ceadfb5da9e1e1d6b19a482186c97
parent 806cc759ef002da5dff1d151ea8485bd871e814c (diff)
remove some caching
Comment 12 Commit Notification 2021-04-23 13:57:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/57c40329a2b469813a1f357de355a37c8e3077ae

tdf#136058: remove some caching

It will be available in 7.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2021-04-26 15:15:19 UTC
This issue is also reproducible in

Version: 4.4.0.0.alpha0+
Build ID: 8d509d69b434bd70b61cb6eed8b8dc21707726a3

Noel's issue might also fix other similar issues...