tdf#136058: remove some caching

if we going to recreate it every time we call this method,
there is no point in caching the result.

Change-Id: Ie1f7bde86eca5cdd998fa8626303d3dead479ad3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114231
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit b236b36475ed9a204ac931c34ccc23205296a0a6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114508
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>