svx/source/sdr/contact/viewcontact.cxx
@@ -38,7 +38,6 @@ ViewObjectContact& ViewContact::CreateObjectSpecificViewObjectContact(ObjectCont
 
 ViewContact::ViewContact()
     : maViewObjectContactVector()
-    , mxViewIndependentPrimitive2DSequence()
 {
 }
 
@@ -105,9 +104,7 @@ void ViewContact::RemoveViewObjectContact(ViewObjectContact& rVOContact)
         maViewObjectContactVector.begin(), maViewObjectContactVector.end(), &rVOContact);
 
     if (aFindResult != maViewObjectContactVector.end())
-    {
         maViewObjectContactVector.erase(aFindResult);
-    }
 }
 
 // Test if this ViewContact has ViewObjectContacts at all. This can
@@ -226,10 +223,9 @@ ViewContact::createViewIndependentPrimitive2DSequence() const
     return drawinglayer::primitive2d::Primitive2DContainer{ xReference };
 }
 
-drawinglayer::primitive2d::Primitive2DContainer const&
+drawinglayer::primitive2d::Primitive2DContainer
 ViewContact::getViewIndependentPrimitive2DContainer() const
 {
-    // local up-to-date checks. Create new list and compare.
     drawinglayer::primitive2d::Primitive2DContainer xNew(
         createViewIndependentPrimitive2DSequence());
 
@@ -239,14 +235,7 @@ ViewContact::getViewIndependentPrimitive2DContainer() const
         xNew = embedToObjectSpecificInformation(std::move(xNew));
     }
 
-    if (mxViewIndependentPrimitive2DSequence != xNew)
-    {
-        // has changed, copy content
-        const_cast<ViewContact*>(this)->mxViewIndependentPrimitive2DSequence = std::move(xNew);
-    }
-
-    // return current Primitive2DContainer
-    return mxViewIndependentPrimitive2DSequence;
+    return xNew;
 }
 
 // add Gluepoints (if available)
